2006-05-02 Sandro Santilli <strk@refractions.net>

	* source/noding/ScaledNoder.cpp: use java_math_round instead
	of sym_round.
	* source/headers/geos/operation/polygonize/Makefile.am:
	do not install EdgeRing.h header.
	* source/operation/polygonize/: polygonizeEdgeRing.cpp
	renamed to EdgeRing.cpp, to follow JTS naming.

2006-05-02 Jeffrey J. Early <jearly@alum.ups.edu>

	* source/io/WKBReader.cpp: fixed reads of XDR WKB.

2006-04-28 Sandro Santilli <strk@refractions.net>

	* tests/unit/geom/: LineStringTest.cpp, MultiPointTest.cpp,
	PointTest.cpp, PolygonTest.cpp: only construct Geoms using
	GeometryFactory.
	* source/geom/GeometryCollection.cpp, source/geom/LineString.cpp,
	source/geom/MultiLineString.cpp, source/geom/MultiPoint.cpp,
	source/geom/MultiPolygon.cpp, source/geom/Point.cpp,
	source/geom/Polygon.cpp, source/headers/geos/geom/Geometry.h,
	source/headers/geos/geom/GeometryCollection.h,
	source/headers/geos/geom/LineString.h,
	source/headers/geos/geom/MultiLineString.h,
	source/headers/geos/geom/MultiPoint.h,
	source/headers/geos/geom/MultiPolygon.h,
	source/headers/geos/geom/Point.h,
	source/headers/geos/geom/Polygon.h:
	Geometry constructors made protected, to ensure all
	constructions use GeometryFactory, which has been made
	friend of all Geometry derivates. getNumPoints() changed
	to return size_t.
	* source/headers/geos/operation/predicate/RectangleIntersects.h,
	source/operation/predicate/RectangleIntersects.cpp,
	source/io/WKTWriter.cpp: removed warnings related to change
	in getNumPoints() return type.
	* source/geom/GeometryFactory.cpp,
	source/headers/geos/geom/GeometryFactory.h: added LineString
	copy constructor
	* source/geom/Polygon.cpp: fixed getBoundary method to
	always return a geometry composed by LineStrings (not LinearRings)

2006-04-27 Sandro Santilli <strk@refractions.net>

	* source/geomgraph/Node.cpp: standard algorithm used in addZ()
	for vector seek.
	* source/geomgraph/NodeMap.cpp: (addNode): always use the Node